added code to use javascripts to get input from DOM

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
+          <div class="labels">
+            <h4>Please tick Character options to include in your password</h4>
+            <input id="specChar" type="checkbox" name="Specail Character">
+            <label for="specChar">Specail Character</label>
+            <input id="lowerChar" type="checkbox" name="lowerChar">
+            <label for="lowerChar">Lowercase</label>
+            <input id="upperChar" type="checkbox" name="upperChar">
+            <label for="upperChar">Uppercase</label>
+            <input id="numeric" type="checkbox" name="numeric">
+            <label for="numeric">Numbers</label>
+          </div>
+          
+        
           <textarea
             readonly
             id="password"
